# celium

./: .gitignore  00_GLOBAL_CONVENTIONS.md  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
bootloader/celloader/: Cargo.toml
bootloader/celloader/.cargo/: config.toml
bootloader/celloader/src/: handoff.rs  hardware.rs  image_loader.rs  main.rs
crates/celcli/: Cargo.toml
crates/celcli/src/: boot.rs  bridge.rs  main.rs  tenant_cli.rs  vm.rs
crates/celcli/tests/: w18_image_e2e.rs
crates/celcommon/: Cargo.toml
crates/celcommon/src/: error.rs  ids.rs  lib.rs
crates/celhyper/: Cargo.toml
crates/celhyper/src/: bridge.rs  bringup.rs  cap.rs  crc.rs  error.rs  guest.rs  handoff.rs  host_gdt.rs  image_loader.rs  iommu.rs  jmp.rs  lapic.rs  lib.rs  logger.rs  main.rs  manager.rs  metrics.rs  mm.rs  pci.rs  sched.rs  serial_io.rs  smp.rs  vm.rs  wire.rs
crates/celhyper/src/arch/: mod.rs  x86.rs
crates/celhyper/src/drivers/: mod.rs  nvme.rs  virtio_blk.rs  virtio_console.rs  virtio_net.rs
crates/celhyper/src/vmx/: cpu.rs  exit.rs  fields.rs  host_state.rs  launch.rs  mod.rs  region.rs  vmcs.rs
crates/celimage/: Cargo.toml
crates/celimage/src/: disk.rs  format.rs  lib.rs  qcow2.rs  raw.rs  util.rs  vhdx.rs  vmdk.rs
crates/celimage/tests/: open_dispatch.rs
crates/celmesh/: Cargo.toml
crates/celmesh/src/: admin.rs  capabilities.rs  federation.rs  host.rs  hyper_host.rs  hyper_serial.rs  k8s.rs  lib.rs  membership.rs  mesh.rs  metrics.rs  observability.rs  proto.rs  transport.rs
crates/celtenancy/: Cargo.toml
crates/celtenancy/src/: audit.rs  auth.rs  caps.rs  exec.rs  lib.rs  main.rs  namespace.rs  quota.rs  runtime.rs  store.rs  tenant.rs  user.rs
crates/celtest/: Cargo.toml
crates/celtest/src/: lib.rs
crates/celtest/tests/: guest_simulation.rs  manager_api.rs  multi_node.rs  multi_node_guest.rs  multi_node_udp.rs  multi_node_volume.rs  multi_vm.rs  persistent_volume_e2e.rs  smoke.rs  tenancy_e2e.rs  tenant_audit_e2e.rs  tenant_auth_e2e.rs  tenant_exec_e2e.rs  tenant_nested_e2e.rs  tenant_runtime_e2e.rs  tenant_w33_e2e.rs  vm_lifecycle.rs  w14_e2e.rs  w15.rs  w17_core.rs  w20_e2e.rs  w22_bridge_e2e.rs  w23_e2_stage_image.rs  w23_qemu_bridge.rs
crates/celvault/: Cargo.toml
crates/celvault/src/: file_store.rs  lib.rs  network.rs
docs/: 01_CELHYPER.md  02_TENANCY_LAYER.md  02_W23_ROADMAP.md  03_W24_BARE_METAL.md  04_W25_HARDENING.md  05_W26_SIGNOFF.md  INSTALL.md  INSTALLER.md  OVERVIEW.md  RUNBOOK.md  USAGE.md
docs/adr/: 0001-celhyper-design.md  0002-atomic-state-persistence.md  0003-image-metadata-gossip.md  0004-core-layer-signoff.md
docs/runbooks/: cluster-join.md  first-boot.md  install.md  vm-create.md
scripts/: build-installer.sh  build-iso.sh  build-pxe.sh  build-usb.sh  run-qemu-bridge-smoke.sh  run-qemu.ps1  run-qemu.sh
tests/: .gitkeep
