[package]
name         = "celcli"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
description  = "Celium operator CLI."

[[bin]]
name = "celctl"
path = "src/main.rs"

[dependencies]
celcommon          = { workspace = true }
celmesh            = { workspace = true }
clap               = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
