[package]
name         = "celcommon"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
description  = "Shared types, errors, tracing, and metrics for Celium."

[dependencies]
thiserror  = { workspace = true }
tracing    = { workspace = true }
serde      = { workspace = true }
prometheus = { workspace = true }
