[package]
name        = "celhyper"
version     = "0.1.0"
edition     = "2021"
rust-version = "1.82"
license     = "Apache-2.0 OR MIT"
authors     = ["The Celium Authors"]
description = "Celium Type-1 micro-hypervisor (bare-metal, no_std)."

# Standalone — not part of the std workspace.
[workspace]

[lib]
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "celhyper"
path = "src/main.rs"

[dependencies]
# Bare-metal x86_64 helpers (paging structs, MSR/CPUID wrappers, port I/O).
x86_64    = { version = "0.15", default-features = false, features = ["instructions"] }
spin      = { version = "0.9",  default-features = false, features = ["mutex", "spin_mutex", "lazy"] }
bitflags  = { version = "2",    default-features = false }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
panic         = "abort"
overflow-checks = true
debug         = "line-tables-only"

# Note: dev profile keeps the default `panic = "unwind"` so `cargo test`
# against the host target can use libtest. Bare-metal builds use --release.
