[package]
name         = "celvault"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
description  = "Celium secure storage and networking (placeholder)."

[dependencies]
celcommon = { workspace = true }
tracing   = { workspace = true }
serde     = { workspace = true, features = ["derive"] }
